Project restructured in different files. Create Session end point implemented, pending send_step
